결제 내역 모달에서 환불 요청 시 이미 환불 요청이거나 결제 실패 시 못하게 조건식 추가