@@ -20,6 +20,8 @@ import com.imchobo.sayren_back.domain.payment.mapper.PaymentHistoryMapper;
 import com.imchobo.sayren_back.domain.payment.mapper.PaymentMapper;
 import com.imchobo.sayren_back.domain.payment.portone.client.PortOnePaymentClient;
 import com.imchobo.sayren_back.domain.payment.portone.dto.payment.PaymentInfoResponse;
+import com.imchobo.sayren_back.domain.payment.refund.entity.RefundRequest;
+import com.imchobo.sayren_back.domain.payment.refund.repository.RefundRequestRepository;
 import com.imchobo.sayren_back.domain.payment.refund.service.RefundRequestService;
 import com.imchobo.sayren_back.domain.payment.refund.service.RefundService;
 import com.imchobo.sayren_back.domain.payment.repository.PaymentRepository;
@@ -40,6 +42,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -58,16 +61,13 @@ public class PaymentServiceImpl implements PaymentService {
   // 매퍼
   private final SubscribeMapper subscribeMapper;
   private final PaymentMapper paymentMapper;
-  private final PaymentHistoryMapper paymentHistoryMapper;
 
   // PortOne api 호출 및 연동
   private final PortOnePaymentClient portOnePaymentClient;
   // 상태 변경 컴포넌트 이벤트 처리
-  private final SubscribeStatusChanger subscribeStatusChanger;
   private final PaymentStatusChanger paymentStatusChanger;
   private final PaymentHistoryRecorder paymentHistoryRecorder;
-  private final RefundService refundService;
-  private final RefundRequestService refundRequestService;
+  private final RefundRequestRepository refundRequestRepository;
 
 
   // 결제 준비
@@ -209,10 +209,12 @@ public class PaymentServiceImpl implements PaymentService {
 
     PaymentResponseDTO dto = paymentMapper.toResponseDTO(payment);
 
-    // 환불 요청 여부는 RefundService에 위임
-    boolean requested = refundRequestService.hasActiveRefundRequest(payment.getOrderItem());
-    dto.setRefundRequested(requested);
+    // 환불 요청 상태 조회
+    RefundRequest request = refundRequestRepository
+            .findFirstByOrderItemOrderByRegDateDesc(payment.getOrderItem())
+            .orElse(null);
 
+    dto.setRefundStatus(request != null ? request.getStatus() : null);
     return dto;
   }
 
@@ -221,13 +223,20 @@ public class PaymentServiceImpl implements PaymentService {
   @Transactional(readOnly = true)
   public List<PaymentResponseDTO> getAll() {
     Member currentMember = SecurityUtil.getMemberEntity();
-    // 현재 로그인한 사용자 기준 최근 결제 내역 조회
-    List<Payment> payments = paymentRepository
-            .findByMemberOrderByRegDateDesc(currentMember);
+    List<Payment> payments = paymentRepository.findByMemberOrderByRegDateDesc(currentMember);
 
-    return payments.stream()
-            .map(paymentMapper::toResponseDTO)
-            .toList();
+    return payments.stream().map(payment -> {
+      PaymentResponseDTO dto = paymentMapper.toResponseDTO(payment);
+
+      // 환불 요청 상태 조회
+      RefundRequest request = refundRequestRepository
+              .findFirstByOrderItemOrderByRegDateDesc(payment.getOrderItem())
+              .orElse(null);
+
+      dto.setRefundStatus(request != null ? request.getStatus() : null);
+
+      return dto;
+    }).collect(Collectors.toList());
   }
   // 관리자용
   @Transactional(readOnly = true)
